# Medic-App

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  clientssl  cmake_install.cmake  script_arg.exp  serveurssl
SOURCES/: account.c  account.h  bdd.txt  chaine.c  chaine.h  client  client.c  client.crt  client.key  clientssl.c  complet.sh  cryptage.c  cryptage.h  cryptage_exe  fonction_client_on_serveur.c  fonction_client_on_serveur.h  fonction_serveur.c  fonction_serveur.h  play  script.exp  server.cert  server.pem  serveur  serveur.c  serveurssl.c  ssl-client  ssl-serveur  strsplit.c  test.c  vim_script.sh
SOURCES/doxygen/: doxygen_sqlite3.db
SOURCES/doxygen/html/: account_8c.html  account_8c__incl.dot  account_8c__incl.md5  annotated.html  chaine_8h_source.html  classes.html  cryptage_8h_source.html  files.html  fonction__client__on__serveur_8h_source.html  fonction__serveur_8h_source.html  globals.html  globals_func.html  graph_legend.html  index.html  structuser.html
SOURCES/doxygen/html/search/: all_0.js  all_1.js  all_2.js  files_0.js  functions_0.js  functions_3.js  functions_4.js  search.js
SOURCES/doxygen/latex/: account_8c.tex  account_8c__incl.dot  account_8c__incl.md5  annotated.tex  files.tex  refman.tex  structuser.tex
